IIS example and links

--- a/web-example.config
+++ b/web-example.config
@@ -4,7 +4,7 @@
  https://github.com/ScottReed/iis-redirect-generator 
 
 Microsoft is ending its efforts to bring PHP to Windows/IIS. 
-Nno plan to support PHP 8.0 and above. 
+No plans to support PHP 8.0 and above. 
 
 Self : https://www.mathias-jaekel.de/it/windows-server/php8-im-iis-unter-windows-2019-einrichten/  
 
