--- a/Addon.ini
+++ b/Addon.ini
@@ -1,5 +1,5 @@
 
 
-Addon_Name			= 'Typesetter Core'
+Addon_Name		= 'Typesetter Core'
 Addon_Unique_ID		= 40
-Addon_Version		= 5.3-p8-b2
+Addon_Version		= 5.3-p8 b3
