--- a/themes/Bootswatch_Flatly/Addon.ini
+++ b/themes/Bootswatch_Flatly/Addon.ini
@@ -1,7 +1,9 @@
 Addon_Name = 'Bootswatch Flatly'
 Addon_Unique_ID = 245
 Addon_Version = 1.0.2
-min_gpeasy_version = 4.3b1
+min_gpeasy_version = 5.1
+
+About = 'A Bootstrap 3 - Less - 5 color - theme';
 
 [FrontEndFramework]
 name = Bootstrap
