removed . (dot) in addon.ini

--- a/themes/Bootstrap5.3_mult/Addon.ini
+++ b/themes/Bootstrap5.3_mult/Addon.ini
@@ -3,7 +3,7 @@ Addon_Name = 'Boot5.3-offcan-mult'
 Addon_Version = 0.8
 min_gpeasy_version = 5.2
 
-About = 'A Bootstrap 5.3 demo - theme with offcanvas mode and multilevel.';
+About = 'A Bootstrap 5.3 demo - theme with offcanvas mode and multilevel';
 
 [FrontEndFramework]
 name = Bootstrap
